feat: add filter by league in the team list.
